--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.input-wrapper {
+  position: relative;
+}
+
+.input-wrapper>input {
+  border: 1px solid black;
+  border-radius: 6px;
+  position: relative;
+  margin-top: 15px;
+  line-height: 3ex;
+  font-size: 16px;
+  width: 100%;
+  color: black;
+}
+
+.input-wrapper>label {
+  display: block;
+  font-size: 12px;
+  position: absolute;
+  top: 1ex;
+  z-index: 1;
+  left: 1em;
+  background-color: white;
+  padding: 0 5px;
+}
+
+::placeholder {
+  color: black;
+}
+
+::-ms-input-placeholder {
+  color: black;
+}
