--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -36,4 +36,4 @@
 
 ::-ms-input-placeholder {
   color: black;
-}
+} */
