--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,12 @@
 ::-ms-input-placeholder {
   color: black;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari and Opera */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
